@@ -1,0 +1,1 @@
+The Plugin is available on Russian language only!
