@@ -1,1 +1,0 @@
-The Plugin is available on Russian language only!
