@@ -3,41 +3,38 @@
 |<class> и внешний вид
 |Описание и параметры
 
-|
-CreateContractsStep
-|
-Создание привязанного к процессу договора.
+| ShowInetSessionStep
+
+image::../../plugin/bgbilling/_res/wizard/step_inet_sessions.png[]
+| Отображение Inet сессий привязанного к процессу договора.
+[square]
+* *inetModuleId* - код модуля Inet.
+
+// шаги ниже этого комментария давно не проверялись и вероятно сломаны
+
+| CreateContractsStep
+| Создание привязанного к процессу договора.
 [square]
 * типы договора должны быть указаны в конфигурации шага аналогично конфигурации модуля с префиксом *contractType.*;
 * *showContractTitle* - 1, отображение наименования договора.
 
-|
-FillParamsStep
-|
-Заполнение параметров созданного и привязанного к процессу договора.
+| FillParamsStep
+| Заполнение параметров созданного и привязанного к процессу договора.
 [square]
 * *parameterIds* - коды параметров договора через запятую;
 * *checkParamIds* - коды параметров договора через запятую, которые должны быть заполнены для прохождения шага.
 
-|
-FindContractStep
-|
-Поиск и привязка договора.
+| FindContractStep
+| Поиск и привязка договора.
 [square]
 * *billingId* - идентификатор биллинга.
 
-|
-SetContractTariffStep
-|
-Установка тарифа у привязанного договора.
+| SetContractTariffStep
+| Установка тарифа у привязанного договора.
 
-|
-ShowContractsByAddrParamStep
-|
-Отображение договоров по адресу процесса.
+| ShowContractsByAddrParamStep
+| Отображение договоров по адресу процесса.
 [square]
 * конфигурация биллинга с префиксом *billing.*;
 * *addressParamId* - код адресного параметра процесса.
 |===
-
-// image::../plugin/bgbilling/_res/image.png[]
