@@ -1,1 +1,3 @@
-C: Simplified configuration of Process Wizard. https://bgerp.org/change/0/doc/kernel/process/wizard.html
+C: Simplified configuration of Process Wizard. https://bgerp.org/version/3.0/doc/kernel/process/wizard.html
+A: Wizard step to show active BGBilling Inet sessions. https://bgerp.org/version/3.0/doc/kernel/process/wizard.html#step-bgbilling
+
